--- a/Index.html
+++ b/Index.html
@@ -53,10 +53,39 @@
               name="location"
             />
             <input class="button" type="submit" value="Rechercher" />
-            <button type="icon" class="ma_glass">
+            <button type="button" class="ma_glass">
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
           </form>
+
+          <!--Ajout d'un formulaire pour les filtres -->
+          <form id="filters" method="post" action="http://traitement.php">
+            <p class="title">Filtres</p>
+            <div id="fbars"><label class="f_choice" for="economique" id="economique">
+            <input class="filter" type="checkbox" name="economique" />
+            <div class="icon"><i class="fa-solid fa-money-bill-wave"></i></div>
+            économique
+            </label>
+            <label class="f_choice" for="familial" id="familial">
+            <input class="filter" type="checkbox" name="familial" />
+            <div class="icon"><i class="fa-solid fa-child-reaching fa-lg"></i></div>
+            Familial</label>
+            <label class="f_choice" for="Romantique" id="Romantique">
+            <input class="filter" type="checkbox" name="Romantique" />
+            <div class="icon"><i class="fa-solid fa-heart"></i></div>
+            Romantique</label>
+            <label class="f_choice" for="Animaux" id="Animaux">
+            <input class="filter" type="checkbox" name="Animaux" />
+            <div class="icon"><i class="fa-solid fa-dog"></i></div>
+            Animaux autorisés</label></div>
+            </form>
+            <div id="info">
+              <div id="cinfo"><i class="fa-solid fa-info"></i></div>
+              <p>
+                Plus de 500 logements sont disponibles dans cette ville
+              </p>
+            </div>
+            
         </article>
         <article id="Hébergements"></article>
 
