--- a/Index.html
+++ b/Index.html
@@ -66,19 +66,19 @@
             <div id="f_bars">
               <div class="filter">
                 <div class="f_icon"><i class="fa-solid fa-money-bill-wave fa-lg"></i></div>
-                <a class="f_link" href="#" class="ftype">économique</a>
+                <a class="f_link" href="#"></a><div class=c_flink><p class="flink_text">économique</p></div>
               </div>
               <div class="filter">
-                <div class="f_icon"><i class="fa-solid fa-child-reaching fa-lg"></i></div>
-                <a class="f_link" href="#"  class="ftype">familial</a>
+                <div class="f_icon"><i class="fa-solid fa-child-reaching fa-xl"></i></div>
+                <a class="f_link" href="#" ></a><div class=c_flink><p class="flink_text" >Familial</p></div>
               </div>
               <div class="filter">
                 <div class="f_icon"><i class="fa-solid fa-heart fa-lg"></i></div>
-                <a class="f_link" href="#"  class="ftype">romantique</a>
+                <a class="f_link" href="#" ></a><div class=c_flink><p class="flink_text" >Romantique</p></div>
               </div>
               <div class="filter">
                 <div class="f_icon"><i class="fa-solid fa-dog fa-lg"></i></div>
-                <a class="f_link" href="#"  class="ftype">Animaux autorisés</a>
+                <a class="f_link" href="#" ></a> <div class=c_flink><p class="flink_text" >Animaux autorisés</p></div>
               </div>
             </div>
           </div>
